fixing some of the pillar and event spacing

--- a/wp-content/themes/pawar2018/sass/components/_content.scss
+++ b/wp-content/themes/pawar2018/sass/components/_content.scss
@@ -72,7 +72,7 @@
   padding-top: 2rem;
   padding-bottom: 2rem;
   @include breakpoint(large) {
-    padding-top: 6.25rem;
+    padding-top: 4.25rem;
     padding-bottom: 1rem;
     padding-left: 6.25%;
     flex: 1 0 0px;
@@ -82,7 +82,7 @@
   }
   .main-callout {
     @include breakpoint(large) {
-      padding-bottom: 5rem;
+      padding-bottom: 1.6rem;
     }
   }
 }
@@ -93,7 +93,7 @@
   flex: 1 0 100%;
   padding-top: 2rem;
   @include breakpoint(large) {
-    padding-top: 6.25rem;
+    padding-top: 4.25rem;
     flex: 0 1 33.3333%;
     position: relative;
   }
@@ -103,7 +103,7 @@
   .main-callout {
     color: $white;
     @include breakpoint(large) {
-      padding-bottom: 5rem;
+      padding-bottom: 2rem;
     }
   }
 }
@@ -115,7 +115,7 @@
   flex-flow: row wrap;
   &:not(:last-child) {
     @include breakpoint(large) {
-      padding-bottom: 5rem;
+      padding-bottom: 3rem;
     }
   }
   &.column {
@@ -150,8 +150,8 @@
 }
 
 .pillar-button {
-  margin-top: 3.75rem;
-  margin-bottom: 5rem;
+  margin-top: 1.75rem;
+  margin-bottom: 3rem;
 }
 
 .event-date_circle {
@@ -178,8 +178,11 @@
 .event-copy {
   margin-bottom: 1rem;
   @include breakpoint(large) {
-    margin: 0;
-    margin-bottom: 3.75rem;
+    margin-bottom: 2rem;
+    &:first-child {
+      margin: 0;
+      margin-bottom: 2.5rem;
+    }
   }
 }
 
@@ -194,7 +197,7 @@
     margin: 0 auto .5rem;
   }
   a.button {
-    margin: 1rem auto 1.5rem;
+    margin: .5rem auto 1.5rem;
   }
 }
 
