--- a/wp-content/themes/pawar2018/sass/modules/_footer.scss
+++ b/wp-content/themes/pawar2018/sass/modules/_footer.scss
@@ -43,7 +43,7 @@
 
 .footer-newsletter {
   font-size: 1.3125rem;
-  margin-top: .5rem;
+  margin: .5rem 0 1rem;
 }
 
 //Footer nav module/components
